$Id: History,v 1.25 2001-07-18 01:25:43 asaim Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

Jul 17 2001, M.Asai (event-V03-02-01)
- G4PrimaryParticle now stores the proper trackID.

Jul 13 2001, G.Cosmo (event-V03-02-00)
- Cleanup of pedantic warnings in Linux-g++ ANSI setup.
- Corrected "int" to "G4int".
- Corrected "NULL" to "0".
- Synchronised with HEAD revision after inclusion of disclaimer
  liability.

Jun 28 2001, G.Cosmo (event-V03-01-01)
- Added CVS headers to G4GeneralParticleSource[.hh.cc] and
  G4GeneralParticleSourceMessenger[.hh.cc].
  Removed <CR> characters and corrected format for comments to
  appear in the Software Reference Manual.

Apr 20 2001, G.Cosmo (event-V03-01-00)
- Modified G4GeneralParticleSource.cc according to recent migration to
  STL vector for the geometry domain (tag "geometry-V03-01-00").

Feb 8 2001, M.Asai (event-V03-00-03)
- Migration to STL vector classes
  affected files :
./event/include/G4HEPEvtInterface.hh
./event/include/G4PrimaryParticle.hh
./event/include/G4TrajectoryContainer.hh
./event/src/G4EventManager.cc
./event/src/G4GeneralParticleSource.cc
./event/src/G4HEPEvtInterface.cc
./event/src/G4PrimaryParticle.cc
./event/src/G4PrimaryTransformer.cc
