@@ -1,4 +1,4 @@
-$Id: History,v 1.25 2001-07-18 01:25:43 asaim Exp $
+$Id: History,v 1.26 2001-07-19 00:14:14 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Jul 18 2001, M.Asai (event-V03-02-02)
+- Added a new feature for the user to increase the number of waiting stacks.
 
 Jul 17 2001, M.Asai (event-V03-02-01)
 - G4PrimaryParticle now stores the proper trackID.
